--- a/Front/src/styles/Body.css
+++ b/Front/src/styles/Body.css
@@ -1,4 +1,4 @@
-.contenedor-buscador {
+.body-contenedor-buscador {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -12,7 +12,7 @@
     overflow: hidden;
 }
 
-#bgVideo {
+#body-bgVideo {
     position: absolute;
     top: 50%;
     left: 50%;
