--- a/Front/src/styles/Footer.css
+++ b/Front/src/styles/Footer.css
@@ -1,4 +1,4 @@
-.footer {
+.footer-container {
     background: linear-gradient(350deg, #555, #333);
     color: #fff;
     padding: 20px 40px;
@@ -12,27 +12,27 @@
     flex-wrap: wrap;
 }
 
-.footer h3 {
+.footer-container h3 {
     margin-bottom: 10px;
     font-size: 16px;
 }
 
-.footer p, .footer ul, .footer a {
+.footer-container p, .footer-container ul, .footer-container a {
     margin: 5px 0;
     color: #bbb;
     text-decoration: none;
 }
 
-.footer ul {
+.footer-container ul {
     list-style: none;
     padding: 0;
 }
 
-.footer a:hover {
+.footer-container a:hover {
     color: #fff;
 }
 
-.consumer-protection {
+.footer-consumer-protection {
     margin: 20px 0;
     font-size: 13px;
     line-height: 1.6;
