--- a/Front/src/styles/VistaAdmin.css
+++ b/Front/src/styles/VistaAdmin.css
@@ -204,3 +204,9 @@ form .cancel-btn:hover {
     background-color: #0056b3;
 }
 
+.crear-paquete-container {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
